# BoBi

./: .gitignore  capacitor.config.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
AnlytsysSample/: 건강검진결과_20260403.xlsx  건강나이알아보기_20260403.xlsx  뇌졸중 예측_20260403.xlsx  심뇌혈관 질환예측_20260403.xlsx
Sample/: 손.생보사+초경증+예외질환_최종 (1).xlsx
android/: bobi-release.keystore  build.gradle  capacitor.settings.gradle
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
app-icon/: README.md  build-icons.js
crawler/: CLAUDE.md  README.md  pyproject.toml
crawler/pipelines/: .gitkeep
crawler/schemas/: .gitkeep
crawler/scripts/: .gitkeep
crawler/sources/: .gitkeep
data/: exception-diseases.json  kcd-compact.json
docs/: QA_3DAY_TRIAL_KAKAOPAY.md  alimtalk-templates.md  cowork-bd-prompt.md  design-system.md  financial-projection-2026.md  ga-proposal.md  inicis-direct-integration.md  insurance-companies-contact.md  insurance-db-legal-questions.md  insurance-db-research.md  investor-pitch-deck.md  investor-pitch-fill.md  posthog-setup.md  refund-policy.md  sentry-setup.md  store-listings.md  tosspayments-integration.md  이종인_영업이사_제안서.docx
hooks/: useAdmin.ts  useOnboardingTour.ts  useSubscription.ts
lib/: device.ts  firebase-admin.ts  open-external.ts  push.ts
public/: card-review.html  service-intro.html
screenshots/: generate-screenshots.mjs
scripts/: add_cancel_at_period_end.sql  add_consultation_memos_table.sql  setup-db.mjs  (+39 more)
(+333 files in other folders)
